working on chat app

--- a/notebooks/LearningLanggraph.ipynb
+++ b/notebooks/LearningLanggraph.ipynb
@@ -47,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_31632\\437216996.py:16: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAI``.\n",
+      "C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_45320\\437216996.py:16: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAI``.\n",
       "  llm = OpenAI(temperature=0, openai_api_key=openai_api_key, max_tokens=1500)\n"
      ]
     }
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x26c3dfcb700>"
+       "<langgraph.graph.state.StateGraph at 0x1e3176bbf10>"
       ]
      },
      "execution_count": 3,
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x26c3dfcb700>"
+       "<langgraph.graph.state.StateGraph at 0x1e3176bbf10>"
       ]
      },
      "execution_count": 4,
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x26c3dfcb700>"
+       "<langgraph.graph.state.StateGraph at 0x1e3176bbf10>"
       ]
      },
      "execution_count": 5,
@@ -175,26 +175,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Value structure: {'messages': [\"\\n\\nAI: Hello Harshal, it's nice to meet you. How can I assist you today?\"]}\n",
+      "Value structure: {'messages': ['\\n\\nAI: Hello Raju, making an omelette is quite simple. Here is a basic recipe you can follow:\\n\\nIngredients:\\n- 2 eggs\\n- 1 tablespoon butter\\n- Salt and pepper to taste\\n- Optional fillings (such as cheese, vegetables, or meat)\\n\\nInstructions:\\n1. Crack the eggs into a bowl and beat them with a fork until well mixed.\\n2. Heat a non-stick pan over medium heat and add the butter.\\n3. Once the butter is melted, pour in the beaten eggs.\\n4. Let the eggs cook for about 1-2 minutes until the bottom is set.\\n5. Use a spatula to gently lift the edges of the omelette and tilt the pan to allow the uncooked eggs to flow underneath.\\n6. Once the top of the omelette is almost set, add your desired fillings on one half of the omelette.\\n7. Use the spatula to fold the other half of the omelette over the fillings.\\n8. Let the omelette cook for another 1-2 minutes until the fillings are heated through and the eggs are fully cooked.\\n9. Slide the omelette onto a plate and season with salt and pepper to taste.\\n10. Serve hot and enjoy your delicious omelette!']}\n",
       "Assistant: \n",
       "\n",
-      "AI: Hello Harshal, it's nice to meet you. How can I assist you today?\n",
-      "Value structure: {'messages': ['\\n\\nAI: I am an artificial intelligence programmed to respond to your questions and engage in conversation. Is there something specific you would like to know?']}\n",
-      "Assistant: \n",
+      "AI: Hello Raju, making an omelette is quite simple. Here is a basic recipe you can follow:\n",
       "\n",
-      "AI: I am an artificial intelligence programmed to respond to your questions and engage in conversation. Is there something specific you would like to know?\n",
-      "Value structure: {'messages': ['\\n\\nLang Graph is a graph-based programming language that uses visual representations to create and manipulate data structures and algorithms. It is designed to make programming more intuitive and accessible for beginners, while still being powerful enough for advanced users. The language is based on the concept of nodes and edges, which are used to represent data and the relationships between them. This allows for a more visual and interactive approach to programming, making it easier to understand and debug code. Lang Graph also has a built-in library of common algorithms and data structures, making it a versatile tool for a wide range of applications.']}\n",
-      "Assistant: \n",
+      "Ingredients:\n",
+      "- 2 eggs\n",
+      "- 1 tablespoon butter\n",
+      "- Salt and pepper to taste\n",
+      "- Optional fillings (such as cheese, vegetables, or meat)\n",
       "\n",
-      "Lang Graph is a graph-based programming language that uses visual representations to create and manipulate data structures and algorithms. It is designed to make programming more intuitive and accessible for beginners, while still being powerful enough for advanced users. The language is based on the concept of nodes and edges, which are used to represent data and the relationships between them. This allows for a more visual and interactive approach to programming, making it easier to understand and debug code. Lang Graph also has a built-in library of common algorithms and data structures, making it a versatile tool for a wide range of applications.\n",
-      "Goodbye!\n"
+      "Instructions:\n",
+      "1. Crack the eggs into a bowl and beat them with a fork until well mixed.\n",
+      "2. Heat a non-stick pan over medium heat and add the butter.\n",
+      "3. Once the butter is melted, pour in the beaten eggs.\n",
+      "4. Let the eggs cook for about 1-2 minutes until the bottom is set.\n",
+      "5. Use a spatula to gently lift the edges of the omelette and tilt the pan to allow the uncooked eggs to flow underneath.\n",
+      "6. Once the top of the omelette is almost set, add your desired fillings on one half of the omelette.\n",
+      "7. Use the spatula to fold the other half of the omelette over the fillings.\n",
+      "8. Let the omelette cook for another 1-2 minutes until the fillings are heated through and the eggs are fully cooked.\n",
+      "9. Slide the omelette onto a plate and season with salt and pepper to taste.\n",
+      "10. Serve hot and enjoy your delicious omelette!\n",
+      "Value structure: {'messages': ['1. \"Bohemian Rhapsody\" by Queen\\n2. \"Stairway to Heaven\" by Led Zeppelin\\n3. \"Hotel California\" by Eagles\\n4. \"Imagine\" by John Lennon\\n5. \"Smells Like Teen Spirit\" by Nirvana\\n6. \"Hey Jude\" by The Beatles\\n7. \"Sweet Child O\\' Mine\" by Guns N\\' Roses\\n8. \"Don\\'t Stop Believin\\'\" by Journey\\n9. \"Livin\\' on a Prayer\" by Bon Jovi\\n10. \"Wonderwall\" by Oasis']}\n",
+      "Assistant: 1. \"Bohemian Rhapsody\" by Queen\n",
+      "2. \"Stairway to Heaven\" by Led Zeppelin\n",
+      "3. \"Hotel California\" by Eagles\n",
+      "4. \"Imagine\" by John Lennon\n",
+      "5. \"Smells Like Teen Spirit\" by Nirvana\n",
+      "6. \"Hey Jude\" by The Beatles\n",
+      "7. \"Sweet Child O' Mine\" by Guns N' Roses\n",
+      "8. \"Don't Stop Believin'\" by Journey\n",
+      "9. \"Livin' on a Prayer\" by Bon Jovi\n",
+      "10. \"Wonderwall\" by Oasis\n"
      ]
     }
    ],
